Fix contrast issue

--- a/_styles/top-banner.less
+++ b/_styles/top-banner.less
@@ -4,6 +4,9 @@
     font-size: 2rem;
     padding: 1rem;
     margin: 0 1rem 0 1rem;
-    background-color: fade(@cryptpad_color_brand_300, 50%);
+    background-color: fade(@cryptpad_color_brand_300, 40%);
     border-radius: 0 0 @radius_L @radius_L;
+    a {
+        color: @text-color;
+    }
 }
